ajuste dos titulos e cores de alguns bullet points

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       </header>
 
       <section class="preparation">
-        <h3>Preparation time</h3>
+        <span class="preparation-title">Preparation time</span>
         <ul>
-          <li><span class="bold-text">Total:</span> Approximately 10 minutes</li>
-          <li><span class="bold-text">Preparation:</span> 5 minutes</li>
-          <li><span class="bold-text">Cooking:</span> 5 minutes</li>
+          <li class="preparation-list"><span class="bold-text">Total:</span> Approximately 10 minutes</li>
+          <li class="preparation-list"><span class="bold-text">Preparation:</span> 5 minutes</li>
+          <li class="preparation-list"><span class="bold-text">Cooking:</span> 5 minutes</li>
         </ul>
       </section>
 
